--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     
     <button class="btn btn-download" onclick="copyText('surge', this)" id="btn3">Copy — iOS (Surge)</button>
 
-    <a class="btn btn-download" href="Growfax_patched_.bat" download id="btn4">Download — Windows</a>
+    <a class="btn btn-download" href="Growfax_Windows.txt" download id="btn4">Download — Windows</a>
     <a class="btn btn-download" href="Growfax_Macos.txt" download id="btn5">Download — macOS</a>
 
     <footer>© 2025 Growfax</footer>
