--- a/index.html
+++ b/index.html
@@ -30,41 +30,43 @@
       background: var(--bg);
       color: var(--text);
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
       margin: 0;
-      transition: background 0.3s, color 0.3s;
       padding: 16px;
+      transition: background 0.3s, color 0.3s;
     }
 
     .card {
       background: var(--card-bg);
-      padding: 24px 20px;
+      padding: 24px;
       border-radius: 12px;
+      max-width: 480px;
       width: 100%;
-      max-width: 420px;
       box-shadow: 0 6px 24px rgba(2,6,23,0.6);
       text-align: center;
       transition: background 0.3s, color 0.3s;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
     h1 {
-      margin: 10px 0 8px 0;
-      font-size: clamp(20px, 4vw, 24px);
+      margin: 0;
+      font-size: clamp(20px, 5vw, 24px);
     }
 
     p {
-      margin: 0 0 18px 0;
+      margin: 0 0 12px 0;
       color: var(--subtext);
-      font-size: clamp(12px, 2vw, 14px);
+      font-size: clamp(12px, 2.5vw, 14px);
     }
 
     .banner {
       width: 100%;
       height: auto;
       border-radius: 10px;
-      margin-bottom: 16px;
       object-fit: contain;
       animation: floatAndGlow 3s ease-in-out infinite;
     }
@@ -78,11 +80,11 @@
     .btn {
       display: block;
       width: 100%;
-      padding: 14px 14px;
-      margin: 10px 0;
+      padding: 14px;
+      margin: 6px 0;
       border-radius: 8px;
       font-weight: 600;
-      border: 0;
+      border: none;
       cursor: pointer;
       font-size: clamp(14px, 3vw, 16px);
     }
@@ -92,11 +94,32 @@
       color: var(--btn-text);
     }
 
-    .controls { display: flex; justify-content: space-between; flex-wrap: wrap; gap: 8px; margin-bottom: 16px; }
-    .toggle, .lang {
-      background: none; border: 1px solid rgba(255,255,255,0.1);
-      color: var(--subtext); border-radius: 6px; padding: 8px 10px; cursor: pointer;
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-bottom: 12px;
     }
+
+    .toggle, .lang {
+      flex: 1;
+      min-width: 120px;
+      padding: 8px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      border: 1px solid rgba(255,255,255,0.1);
+      background: none;
+      color: var(--subtext);
+      transition: 0.2s;
+    }
+
+    body.light .toggle, body.light .lang {
+      border-color: #ccc;
+      color: #444;
+    }
+
+    .toggle:hover, .lang:hover { opacity: 0.8; }
 
     input {
       width: 100%;
@@ -105,12 +128,12 @@
       border: 1px solid rgba(255,255,255,0.2);
       background: rgba(0,0,0,0.1);
       color: var(--text);
-      margin-bottom: 10px;
+      margin-bottom: 8px;
       box-sizing: border-box;
     }
 
     .paypal-box {
-      margin-top: 8px;
+      margin-top: 6px;
       border-radius: 10px;
       background: rgba(255,255,255,0.05);
       padding: 10px;
@@ -118,9 +141,20 @@
       pointer-events: none;
       transition: opacity 0.3s;
     }
+
     .paypal-box.active { opacity: 1; pointer-events: auto; }
 
-    footer { margin-top: 16px; font-size: 12px; color: var(--subtext); }
+    footer {
+      margin-top: 16px;
+      font-size: clamp(10px, 2vw, 12px);
+      color: var(--subtext);
+    }
+
+    @media (max-width: 480px) {
+      .card { padding: 16px; }
+      .controls { flex-direction: column; align-items: stretch; }
+      .toggle, .lang { min-width: 0; }
+    }
   </style>
 
   <!-- PayPal & EmailJS -->
@@ -173,59 +207,59 @@ www.growtopia1.com = 91.134.85.13
 www.growtopia2.com = 91.134.85.13`
     };
 
-    function copyText(key, btn) {
+    function copyText(key, btn){
       navigator.clipboard.writeText(configData[key]);
-      const old = btn.innerText;
-      btn.innerText = "✅ Copied!";
-      setTimeout(() => btn.innerText = old, 2000);
+      const old=btn.innerText;
+      btn.innerText="✅ Copied!";
+      setTimeout(()=>btn.innerText=old,2000);
     }
 
-    function updateClock() {
-      const now = new Date();
-      const sydney = new Date(now.toLocaleString('en-US', { timeZone: 'Australia/Sydney' }));
-      document.getElementById('clock').innerText = "Sydney Time: " + sydney.toLocaleTimeString('en-GB');
+    // Clock Sydney
+    function updateClock(){
+      const now=new Date();
+      const sydney=new Date(now.toLocaleString('en-US',{timeZone:'Australia/Sydney'}));
+      document.getElementById('clock').innerText="Sydney Time: "+sydney.toLocaleTimeString('en-GB');
     }
-    setInterval(updateClock, 1000);
+    setInterval(updateClock,1000);
     updateClock();
 
-    function toggleTheme() { document.body.classList.toggle('light'); }
-
-    let lang = 'en';
-    function toggleLang(shouldToggle = true) {
-      if (shouldToggle) lang = (lang === 'id') ? 'en' : 'id';
-      const en = lang === 'en';
-      document.querySelector('.lang').innerText = en ? "🌍 Indonesia" : "🌍 English";
-      document.getElementById('title').innerText = en ? "Growfax — Download Files" : "Growfax — Unduh File";
-      document.getElementById('desc').innerText = en ? "Choose the file you want to copy or download." : "Pilih file yang ingin disalin atau diunduh.";
-      document.getElementById('roleshop').innerText = en ? "Role Shop" : "Toko Role";
+    // Dark/Light + Language toggle
+    function toggleTheme(){ document.body.classList.toggle('light'); }
+    let lang='en';
+    function toggleLang(){
+      lang=(lang==='id')?'en':'id';
+      const en=lang==='en';
+      document.querySelector('.lang').innerText=en?"🌍 Indonesia":"🌍 English";
+      document.getElementById('title').innerText=en?"Growfax — Download Files":"Growfax — Unduh File";
+      document.getElementById('desc').innerText=en?"Choose the file you want to copy or download.":"Pilih file yang ingin disalin atau diunduh.";
+      document.getElementById('roleshop').innerText=en?"Role Shop":"Toko Role";
     }
 
-    const ids = ["FF8XAQ7BZ43JJ","ETYPYS2JQCWDC","RH289YEZ89TVU","DH5RHN2XEH9ME","YA2NYCXBWAREG","UVRXXDZF7T2KY"];
-    ids.forEach(id => {
+    // PayPal + EmailJS
+    const ids=["FF8XAQ7BZ43JJ","ETYPYS2JQCWDC","RH289YEZ89TVU","DH5RHN2XEH9ME","YA2NYCXBWAREG","UVRXXDZF7T2KY"];
+    ids.forEach(id=>{
       paypal.HostedButtons({
-        hostedButtonId: id,
-        onApprove: (data, actions) => {
-          return actions.order.capture().then(details => {
-            const growid = document.getElementById("growid").value.trim() || "Not provided";
-            const buyerEmail = document.getElementById("buyerEmail").value.trim() || "Not provided";
-            const paypal_name = details.payer.name?.given_name || "Unknown";
-            const paypal_email = details.payer.email_address || "Unknown";
-            const amount = details.purchase_units?.[0]?.amount?.value || "0.00";
-            const date = new Date().toLocaleString("en-AU", { timeZone: "Australia/Sydney" });
+        hostedButtonId:id,
+        onApprove:(data,actions)=>{
+          return actions.order.capture().then(details=>{
+            const growid=document.getElementById("growid").value.trim()||"Not provided";
+            const buyerEmail=document.getElementById("buyerEmail").value.trim()||"Not provided";
+            const paypal_name=details.payer.name?.given_name||"Unknown";
+            const paypal_email=details.payer.email_address||"Unknown";
+            const amount=details.purchase_units?.[0]?.amount?.value||"0.00";
 
-            emailjs.send("service_6ba3mun", "template_06qc85l", {
-              to_email: "growfaxz@gmail.com",
-              growid,
-              buyer_email: buyerEmail,
-              paypal_name,
-              paypal_email,
-              amount,
-              role: id,
-              date
-            }).then(() => {
+            emailjs.send("service_6ba3mun","template_06qc85l",{
+              to_email:"growfaxz@gmail.com",
+              growid:growid,
+              buyer_email:buyerEmail,
+              paypal_name:paypal_name,
+              paypal_email:paypal_email,
+              amount:amount,
+              role:id
+            }).then(()=>{
               alert("✅ Payment successful! Transaction sent to Growfax admin email.");
-            }).catch(error => {
-              console.error("EmailJS error:", error);
+            }).catch(err=>{
+              console.error("EmailJS error:",err);
               alert("Payment successful, but email failed to send.");
             });
           });
@@ -233,18 +267,16 @@ www.growtopia2.com = 91.134.85.13`
       }).render(`#paypal-container-${id}`);
     });
 
-    // Disable PayPal buttons until both inputs filled
-    const growInput = document.getElementById("growid");
-    const emailInput = document.getElementById("buyerEmail");
-    const paypalBoxes = document.querySelectorAll(".paypal-box");
-
-    function updatePayPalState() {
-      const active = growInput.value.trim().length > 0 && emailInput.value.trim().length > 0;
-      paypalBoxes.forEach(box => box.classList.toggle("active", active));
+    // Enable PayPal buttons only if both inputs filled
+    const growInput=document.getElementById("growid");
+    const emailInput=document.getElementById("buyerEmail");
+    const paypalBoxes=document.querySelectorAll(".paypal-box");
+    function updatePayPalState(){
+      const active=growInput.value.trim().length>0 && emailInput.value.trim().length>0;
+      paypalBoxes.forEach(box=>box.classList.toggle("active",active));
     }
-
-    growInput.addEventListener("input", updatePayPalState);
-    emailInput.addEventListener("input", updatePayPalState);
+    growInput.addEventListener("input",updatePayPalState);
+    emailInput.addEventListener("input",updatePayPalState);
   </script>
 </body>
 </html>
